repair some details

--- a/src/components/pages/Briefcase/briefcaseStyles.css
+++ b/src/components/pages/Briefcase/briefcaseStyles.css
@@ -1,5 +1,5 @@
 .briefcase {
-    height: 100vh;
+    height: auto;
     background-repeat: no-repeat;
     background-color: #191919;
     background-size: cover;
