--- a/src/components/pages/Frontpage/stylesHome.css
+++ b/src/components/pages/Frontpage/stylesHome.css
@@ -6,6 +6,10 @@
     background-size: cover;
 }
 
+.text-responsive{
+    font-size: calc(1em + 1vh);
+}
+
 .background {
     width: 100vw;
     height: 100vh;
