--- a/src/components/pages/Briefcase/briefcaseStyles.css
+++ b/src/components/pages/Briefcase/briefcaseStyles.css
@@ -10,7 +10,9 @@
 
 .image-card {
     width: 6vw;
-     height: 10vh;
+    height: 10vh;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .card {
@@ -49,6 +51,7 @@
 .fas.fa-people-carry {
     font-size: 40px;
     background-color: #0000000d;
+   
     height: 100px;
     width: 100px;
     display: flex;
@@ -56,6 +59,10 @@
     justify-content: center;
     border-radius: 50%;
     color: #8C00FF;
+}
+
+.img-brief{
+    object-fit:auto;
 }
 
 .card .h4 {
@@ -98,6 +105,13 @@
 .card:hover .fas.fa-people-carry {
     color: rgb(250, 250, 251);
     background-color: #8C00FF;
+}
+
+.icon-arrow{
+    cursor: pointer;
+    margin-left: 4px;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 @media (max-width:990px) {
